--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "conexion": "Server=localhost\\SQLEXPRESS;Database=CineUTN;Trusted_Connection=True;TrustServerCertificate=true;"
+    "conexion": "Server=localhost\\SQLEXPRESS;Database=CineUTN;Trusted_Connection=True;TrustServerCertificate=true;",
+    
   }
 }
