--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "conexion": "Server=localhost\\SQLEXPRESS;Database=CineUTN;Trusted_Connection=True;TrustServerCertificate=true;",
-    
+    "conexion": "Data Source=SQL8006.site4now.net;Initial Catalog=db_aa08be_cineutn;User Id=db_aa08be_cineutn_admin;Password=Abcd1234;"
+    //"Data Source=SQL8006.site4now.net;Initial Catalog=db_aa08be_cineutn;User Id=db_aa08be_cineutn_admin;Password=Abcd1234
+    //Server=localhost\\SQLEXPRESS;Database=CineUTN;Trusted_Connection=True;TrustServerCertificate=true
   }
 }
