--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -10,5 +10,11 @@
     "conexion": "Data Source=SQL8006.site4now.net;Initial Catalog=db_aa08be_cineutn;User Id=db_aa08be_cineutn_admin;Password=Abcd1234;"
     //"Data Source=SQL8006.site4now.net;Initial Catalog=db_aa08be_cineutn;User Id=db_aa08be_cineutn_admin;Password=Abcd1234
     //Server=localhost\\SQLEXPRESS;Database=CineUTN;Trusted_Connection=True;TrustServerCertificate=true
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "461436274345-mflev2vcc07sd99ghfvd1lqn6k4k0o9l.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
   }
 }
