stringconnection productivo somee

--- a/Web/appsettings.Development.json
+++ b/Web/appsettings.Development.json
@@ -4,5 +4,17 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "conexion": "workstation id=CineUTN.mssql.somee.com;packet size=4096;user id=pohenrique_SQLLogin_1;pwd=m8ihd1d5ib;data source=CineUTN.mssql.somee.com;persist security info=False;initial catalog=CineUTN;TrustServerCertificate=true"
+    //"conexion": "Server=localhost\\SQLEXPRESS;Database=CineUTN;Trusted_Connection=True;TrustServerCertificate=true;"
+    //"conexion": "Data Source=SQL8006.site4now.net;Initial Catalog=db_aa08be_cineutn;User Id=db_aa08be_cineutn_admin;Password=Abcd1234;"
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "461436274345-mflev2vcc07sd99ghfvd1lqn6k4k0o9l.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
   }
 }
