--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -7,8 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    "conexion": "workstation id=CineUTN.mssql.somee.com;packet size=4096;user id=pohenrique_SQLLogin_1;pwd=m8ihd1d5ib;data source=CineUTN.mssql.somee.com;persist security info=False;initial catalog=CineUTN;TrustServerCertificate=true"
+    //"conexion": "Server=localhost\\SQLEXPRESS;Database=CineUTN;Trusted_Connection=True;TrustServerCertificate=true;"
     //"conexion": "Data Source=SQL8006.site4now.net;Initial Catalog=db_aa08be_cineutn;User Id=db_aa08be_cineutn_admin;Password=Abcd1234;"
-    "conexion": "Server=localhost\\SQLEXPRESS;Database=CineUTN;Trusted_Connection=True;TrustServerCertificate=true;"
   },
   "Authentication": {
     "Google": {
